force-app/main/default/objects/Work_Schedule_Day__c/Work_Schedule_Day__c.object-meta.xml
<CustomObject>
    <label>Work Schedule Day</label>
    <nameField>
        <label>Work Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Schedule Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>