force-app/main/default/objects/Work_Schedule_Day__c/fields/Day_of_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Number__c</fullName>
    <formula>CASE(
    TEXT(Day_of_Week__c),
    &apos;Sunday&apos;, 1,
    &apos;Monday&apos;, 2,
    &apos;Tuesday&apos;, 3,
    &apos;Wednesday&apos;, 4,
    &apos;Thursday&apos;, 5,
    &apos;Friday&apos;, 6,
    &apos;Saturday&apos;, 7,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>