force-app/main/default/objects/Work_Schedule_Day__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>