force-app/main/default/objects/Work_Schedule_Day__c/fields/Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Schedule</label>
    <referenceTo>Work_Schedule__c</referenceTo>
    <relationshipLabel>Work Schedule Days</relationshipLabel>
    <relationshipName>Work_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>